Switch OS X video capture to new version of webrtc.org code
Categories
(Core :: WebRTC: Audio/Video, defect, P2)
Tracking
()
People
(Reporter: dminor, Assigned: dminor)
References
Details
Attachments
(2 files)
47 bytes,
text/x-phabricator-request
|
Details | Review | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Assignee | ||
Comment 1•7 years ago
|
||
Assignee | ||
Comment 2•7 years ago
|
||
Assignee | ||
Comment 3•7 years ago
|
||
Assignee | ||
Comment 4•7 years ago
|
||
Assignee | ||
Comment 5•7 years ago
|
||
Assignee | ||
Comment 6•7 years ago
|
||
![]() |
||
Comment 9•7 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/e79251fa381c
https://hg.mozilla.org/mozilla-central/rev/7924a0ccd7a3
Updated•7 years ago
|
Assignee | ||
Comment 10•7 years ago
|
||
Comment on attachment 9032935 [details]
Bug 1439997 - Fix ondevicechange event on OS X; r=jib
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1376873
User impact if declined: The ondevicechange events will not work on OS X, e.g. when a camera is unplugged.
Is this code covered by automated tests?: No
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: Yes
If yes, steps to reproduce: You can use the steps from Bug 1436959.
List of other uplifts needed: Bug 1518744
Risk to taking this patch: Medium
Why is the change risky/not risky? (and alternatives if risky): This brings forward some of the code from Bug 1286429 to work with the newer video capture backend introduced with the webrtc.org branch update in Bug 1376873. Although the code is not completely new, some rewriting was required, and one crash was introduced and fixed (Bug 1518744). Since this has not been on Nightly for long, there is a risk that other issues are present that have not shown up yet.
String changes made/needed: None.
Updated•7 years ago
|
Comment 11•7 years ago
|
||
Comment on attachment 9032935 [details]
Bug 1439997 - Fix ondevicechange event on OS X; r=jib
[Triage Comment]
Fixes a macOS video capture regression introduced by the WebRTC update shipped in Fx64. Approved for 65.0b11. Let's get some QA on this as well given the medium risk of the change.
Comment 12•7 years ago
|
||
bugherder uplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/9104a4e2e3a4
https://hg.mozilla.org/releases/mozilla-beta/rev/b295af2ecf44
![]() |
||
Comment 13•7 years ago
|
||
I reproduced this issue using Fx 60.0a1(2018-02-20), on macOS 10.13.6.
I can confirm this issue is fixed on Fx 66(2019-01-14). I will come back after Fx 65.0b11 is available.
Comment 14•7 years ago
|
||
Reproduced the issue with 65.0b10 on macOS 10.11
Verified the fix on Ffx 65.0b11.
Description
•