Bug 1439997 - Fix ondevicechange event on OS X. r=jib, a=RyanVM

This brings the changes from Bug 1286429 that were made to the older
mac/avfoundation video capture code to the newer objc video capture
code.

Depends on D15196

Differential Revision: https://phabricator.services.mozilla.com/D15197

--HG--
extra : source : 7924a0ccd7a35b7fd7cc2926738c84f76c2e058a